[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distllm"
version = "1.0.2"
authors = [
    {name = "Alexander Brace", email = "abrace@anl.gov"},
    {name = "Ozan Gokdemir", email = "ogokdemir@uchicago.edu"},
]
description = "Distributed Inference for Large Language Models."
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "transformers>=4.38.2",
    "datasets>=2.18.0",
    "bitsandbytes>=0.42.0",
    "langchain>=0.2.5",
    "langchain-anthropic>=0.1.7",
    "langchain-google-genai>=1.0.1",
    "accelerate>=0.28.0",
    "parsl>=2024.1.29",
    "pydantic>=2.6.0",
    "typer[all]>=0.9.0",
    "nltk>=3.9",
    "python-dotenv>=1.0.1",
    "peft>=0.10.0",
    "sentence-transformers>=3.3.1",
    "torch",
    "faiss-gpu-cu12==1.12.0",
    "numpy==1.26.4",
    "backoff==2.2.1"
]

[project.urls]
homepage = "https://github.com/ramanathanlab/distllm"
documentation = "https://github.com/ramanathanlab/distllm"
repository = "https://github.com/ramanathanlab/distllm"

[project.scripts]
distllm = "distllm.cli:main"

[project.optional-dependencies]
dev = [
    "covdefaults>=2.2",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "virtualenv",
    "types-PyYAML",
    "build",
    "twine",
]
docs = [
    "black",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material==9.4.7",
    "mkdocs-section-index",
    "mkdocstrings==0.23.0",
    "mkdocstrings-python==1.8.0",
    "mike",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info
"""

[tool.coverage.run]
plugins = ["covdefaults"]
omit = ["examples"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "testing.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_incomplete_defs = true
allow_untyped_defs = true

[tool.ruff.lint]
# See all rules here: https://beta.ruff.rs/docs/rules
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-commas
    # "COM",
    # flake8-comprehensions
    "C4",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # PyLint
    "PL",
    # ruff-specific
    "RUF",
]
# extend-ignore = ["Q001"]
# target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
#multiline-quotes = "single"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["distllm", "test", "testing"]
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"*/*_test.py" = ["D10"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
